force-app/main/default/objects/BMCServiceDesk__Change_Assessment__c/BMCServiceDesk__Change_Assessment__c.object-meta.xml
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpChangeAssessment</customHelpPage>
    <description>This object allows you to store data for change assessments.</description>
    <label>Change Assessment</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Assessment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>