force-app/main/default/objects/BMCServiceDesk__Change_Assessment__c/fields/BMCServiceDesk__Assessment_Completed__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Assessment_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field stores the value if the change has the assessment completed</description>
    <inlineHelpText>Select this field if you want to complete the change assessment for the linked change request.</inlineHelpText>
    <label>Assessment Completed</label>
    <type>Checkbox</type>
</CustomField>