force-app/main/default/objects/BMCServiceDesk__Change_Assessment__c/fields/BMCServiceDesk__Assessment_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Assessment_Completion_Date__c</fullName>
    <description>This field stores the date and time of the assessment completion</description>
    <inlineHelpText>This field is automatically set to the date when you have completed the change assessment.</inlineHelpText>
    <label>Assessment Completion Date</label>
    <type>DateTime</type>
</CustomField>