force-app/main/default/objects/BMCServiceDesk__Change_Assessment__c/fields/BMCServiceDesk__Business_Risks__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Business_Risks__c</fullName>
    <description>This field stores the business risks involved with the change</description>
    <inlineHelpText>From the list of options, select the level of business risk that is involved in implementing the change request.</inlineHelpText>
    <label>Business Risks</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>