force-app/main/default/objects/BMCServiceDesk__Change_Assessment__c/fields/BMCServiceDesk__Comments__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Comments__c</fullName>
    <description>This field stores the data to allow the change assessor to add in comments</description>
    <inlineHelpText>Use this field to enter comments that you want to include in the change assessment for the change approver. The change approver can use these comments to decide about approving or rejecting the change request.</inlineHelpText>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>