force-app/main/default/objects/BMCServiceDesk__Change_Assessment__c/fields/BMCServiceDesk__FKAssessor__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKAssessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the foreign key value of the linked assessor</description>
    <label>Assessor ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>