force-app/main/default/objects/BMCServiceDesk__Change_Assessment__c/fields/BMCServiceDesk__FKChange__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKChange__c</fullName>
    <description>This field stores the foreign key value of the linked change</description>
    <label>Change Request</label>
    <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
    <relationshipLabel>Change Assessments</relationshipLabel>
    <relationshipName>Change_Assessments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>